fix(ZNTA-1910): fixed percentage wrapping on approved 100% text in suggestions panel of editor

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
@@ -357,6 +357,10 @@ ul.u-listInline li .u-textSuccess {
   width:110%;
 }
 
+ul.u-listInline li .u-textHighlight {
+  width:110%;
+}
+
 .tab-content > .tab-pane {
   display: none;
 }
